--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "main.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"sass": "npx sass --quiet-deps --watch main.scss main.css"
+		"sass": "npx sass --quiet-deps --watch main.scss main.css",
+		"build": "npx sass --style compressed main.scss main.css && node uncss.js"
 	},
 	"author": "Toluwanimi Agboola",
 	"license": "ISC",
@@ -13,5 +14,8 @@
 		"bulma": "^0.9.2",
 		"feather-icons": "^4.28.0",
 		"sass": "^1.34.0"
+	},
+	"devDependencies": {
+		"uncss": "^0.17.3"
 	}
 }
